added swagger, connected to an external pgsql db

--- a/DonationDiary_ASP/appsettings.json
+++ b/DonationDiary_ASP/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-DonationDiary_ASP-304166f2-101c-480a-bd65-065757950294;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Host=dpg-cmn95d0l5elc73cgs3t0-a.frankfurt-postgres.render.com;Database=donationdiarydb;Username=donationdiarydb_user;Password=GhnVoqJ4EjluOhXNyAIVe7lXbmFdQWXp;Port=5432"
   },
   "Logging": {
     "LogLevel": {
