--- a/DonationDiary_ASP/DonationDiary_ASP.csproj
+++ b/DonationDiary_ASP/DonationDiary_ASP.csproj
@@ -11,10 +11,7 @@
     <PackageReference Include="Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore" Version="7.0.12" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="7.0.12" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="7.0.12" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.
-					  
-
-	  " Version="7.0.12" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.&#xD;&#xA;					  &#xD;&#xA;&#xD;&#xA;	  " Version="7.0.12" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="7.0.12" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="7.0.9" />
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="7.0.4" />
